<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/tv_info_general_title"
        android:layout_width="411dp"
        android:layout_height="224dp"
        android:layout_marginButton="4dp"
        android:background="@drawable/background_intro"
        android:contentDescription="@string/ingrese_a_la_app_de_asodesunidos_para_sus_gestiones_como_asociado"
        android:text="@string/ingrese_a_la_app_de_asodesunidos_para_sus_gestiones_como_asociado"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewCrearPrestamo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:ems="10"
            android:text="@string/textViewCrearPrestamo"
            android:textAlignment="center"
            android:textColor="@color/font"
            android:textSize="32sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="textViewCrearPrestamo"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextMonto"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:textSize="16sp"
            android:hint="Monto del préstamo"
            android:inputType="numberDecimal"
            />

        <Spinner
            android:id="@+id/spinnerDuracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:entries="@array/duracion_opciones"
            android:prompt="@string/duracion_prompt" />

        <Spinner
            android:id="@+id/spinnerTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:entries="@array/tipo_opciones"
            android:prompt="@string/tipo_prompt" />

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calcular" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>