<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/tv_info_general_title"
        android:layout_width="411dp"
        android:layout_height="190dp"
        android:layout_marginButton="4dp"
        android:background="@drawable/background_intro"
        android:contentDescription="@string/ingrese_a_la_app_de_asodesunidos_para_sus_gestiones_como_asociado"
        android:text="@string/ingrese_a_la_app_de_asodesunidos_para_sus_gestiones_como_asociado"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTituloIngresarCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:ems="10"
            android:text="@string/ingrese_la_informacion_de_asociado"
            android:textAlignment="center"
            android:textColor="@color/font"
            android:textSize="16sp" />
    </ScrollView>

    <TextView
        android:id="@+id/CrearCliText"
        android:layout_width="274dp"
        android:layout_height="68dp"
        android:layout_marginTop="52dp"
        android:text="@string/asodesunidos"
        android:textAlignment="center"
        android:textColor="@color/font"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_cedula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Cédula"
        android:inputType="number"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_info_general_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Nombre"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/et_cedula"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_salario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Salario"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/et_nombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Teléfono"
        android:inputType="phone"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/et_salario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/et_fecha_nacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Fecha de Nacimiento"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_telefono" />


    <Spinner
        android:id="@+id/spinnerEstadoCivil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:entries="@array/estado_civil"
        android:padding="16dp"
        android:prompt="@string/duracion_prompt"
        app:layout_constraintStart_toStartOf="et_fecha_nacimiento"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha_nacimiento" />

    <EditText
        android:id="@+id/et_direccion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Direccion"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerEstadoCivil" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:background="@drawable/btn_background"
        android:text="@string/Crear"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_direccion"
        app:layout_constraintVertical_bias="0.733" />

</androidx.constraintlayout.widget.ConstraintLayout>